// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen renders the EnterClubNbr modal when a user logs in without a club number 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={true}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </Modal>
  <Button
    backgroundColor="#0071e9"
    disabled={false}
    height={45}
    onPress={[Function]}
    radius={5}
    style={
      Object {
        "height": 40,
        "width": "85%",
      }
    }
    title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
    titleColor="#ffffffff"
    titleFontSize={16}
    titleFontWeight="normal"
    type={1}
    width={-1}
  />
</View>
`;

exports[`LoginScreen renders the snapshot test appropriately 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    transparent={true}
    visible={false}
  >
    <EnterClubNbrForm
      onSignOut={[Function]}
      onSubmit={[Function]}
    />
  </Modal>
  <Button
    backgroundColor="#0071e9"
    disabled={false}
    height={45}
    onPress={[Function]}
    radius={5}
    style={
      Object {
        "height": 40,
        "width": "85%",
      }
    }
    title="[missing \\"en.GENERICS.SIGN_IN\\" translation]"
    titleColor="#ffffffff"
    titleFontSize={16}
    titleFontWeight="normal"
    type={1}
    width={-1}
  />
</View>
`;
